--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+pip install sqlalchemy
+pip install aiosqlite
+pip install databases
